sync dark mode fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1340,7 +1340,8 @@ div.forms select {
     padding: .4em 2em .4em .8em;
     font-size: 1em;
     border:1px solid #bebebe;
-
+    background-color: white;
+    color: black;
 }
 .select-container {position:relative; display: inline-block;}
 .select-container:after {content:""; width:0; height:0; position:absolute; pointer-events: none;}
@@ -1385,6 +1386,8 @@ textarea {
     line-height: 1.8em;
     margin-bottom:10px;
     border-radius:5px;
+    background-color: white;
+    color: black;
     border:1px solid #bebebe;
     display: block;
 }
